# UrbanReconstruct

./: .env.example  .gitignore  .gitmodules  README.md  get_image_close_to_1.json  pyproject.toml
src/: main.py  pipeline.py
src/data_acquisition/: mapillary_apit.py  requirements.txt
src/data_acquisition/carla/: main.py  pyproject.toml
src/data_acquisition/carla_sim/: main.py  pyproject.toml
src/data_acquisition/web_interface/: index.html  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
src/data_acquisition/web_interface/src/app/: Map.tsx  page.module.css  page.tsx
src/data_acquisition/web_interface/src/app/api/images/: route.ts
src/data_acquisition/web_interface/src/app/api/lidar/: route.ts
src/data_processing/image_preprocessing/: README.md  filter_pointcloud.py  main.py  mask.py  pyproject.toml
src/data_processing/mesh_reconstruction/: README.md  main.py  poisson_reconstruction.py  pyproject.toml
src/stages/: colmap_reconstruction.py  image_preprocessing.py  mapanything_inference.py  mpsfm_reconstruction.py
