[project]
name = "UrbanReconstruct"
version = "0.1.0"
description = "3D reconstruction pipeline using MapAnything"
requires-python = ">=3.10"
dependencies = [
    "mapanything",
]

[tool.uv.sources]
mapanything = { path = "src/map_anything", editable = true }

[project.scripts]
urbanreconstruct = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
